[gd_scene load_steps=9 format=3 uid="uid://cbwanmtta4qi1"]

[ext_resource type="Script" uid="uid://choy6xrioyr2d" path="res://scenes/level_template/level_template.gd" id="1_lhyem"]
[ext_resource type="Texture2D" uid="uid://dhussp1usp0h5" path="res://assets/grass.png" id="2_at0gl"]
[ext_resource type="Texture2D" uid="uid://dgul0242ujqm1" path="res://assets/bg_texture_2.png" id="3_ratl3"]
[ext_resource type="PackedScene" uid="uid://bvex0uxatt47j" path="res://scenes/tile/tile.tscn" id="4_rmr5i"]
[ext_resource type="PackedScene" uid="uid://2q0divxk8s5" path="res://scenes/player/player.tscn" id="5_fwidc"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_kelw5"]
vertices = PackedVector2Array(966.1797, 276.27344, 988.27344, 254.17969, 1086.1797, 555.72656, 1056, 547.64844, 924.35156, 480, 916.27344, 449.8203, 936, 859.64844, 905.8203, 867.72656, 868.35156, 864, 860.27344, 833.8203, 408, 355.64844, 377.8203, 363.72656, 268.35156, 360, 260.27344, 329.8203, 660.27344, 566.1797, 668.35156, 536, 833.8203, 532.27344, 864, 540.35156, 808, 555.64844, 777.8203, 563.72656, 412.35156, 792, 585.8203, 788.27344, 616, 796.35156, 404.27344, 822.1797, 864, 419.64844, 833.8203, 427.72656, 468.35156, 416, 460.27344, 385.8203, 380.35156, 936, 777.8203, 916.27344, 808, 924.35156, 372.27344, 966.1797, 724.35156, 304, 800, 284.35156, 905.8203, 276.27344, 936, 284.35156, 894.1797, 427.72656, 716.27344, 334.1797, 676.35156, 736, 1025.8203, 660.27344, 1056, 668.35156, 966.1797, 867.72656, 838.1797, 811.72656, 1025.8203, 555.72656, 916.27344, 510.1797, 755.72656, 646.1797, 777.8203, 668.27344, 540.35156, 672, 563.72656, 766.1797, 811.72656, 510.1797, 811.72656, 449.8203, 355.72656, 385.8203, 260.27344, 390.1797, 755.72656, 894.1797, 1116.3516, 608, 1861.8984, -493.96094, 1846.0781, 1277.9297, 1108.2734, 638.1797, 1108.2734, 577.8203, 996.35156, 224, 988.27344, 193.82031, 883.72656, 889.8203, 860.27344, 894.1797, 1003.72656, 638.1797, 668.27344, 705.8203, 808, 676.35156, 988.27344, 950.1797, 996.35156, 920, 1086.1797, 660.27344, 988.27344, 889.8203, 875.64844, 920, 838.1797, 916.27344, 1003.72656, 577.8203, 894.1797, 532.27344, 803.64844, 480, 460.27344, 446.1797, 747.64844, 864, 372.27344, 905.8203, 747.64844, 616, 532.27344, 641.8203, 555.64844, 736, 404.27344, 761.8203, 660.27344, 505.8203, 347.64844, 416, 238.17969, 412.27344, 966.1797, 171.72656, -518, -486.03125, 936, 163.64844, 905.8203, 171.72656, 883.72656, 193.82031, 830.1797, 171.72656, 995.64844, 608, 868.35156, 616, 860.27344, 585.8203, 838.1797, 563.72656, 860.27344, 646.1797, 340.35156, 544, 332.27344, 513.8203, 547.64844, 536, 555.72656, 566.1797, 555.72656, 505.8203, 310.1797, 491.72656, 332.27344, 574.1797, 577.8203, 588.27344, 694.1797, 356.27344, 268.35156, 864, 755.72656, 833.8203, 320, 875.64844, 860.35156, 224, 875.64844, 224, 852.27344, 254.17969, 852.27344, 193.82031, 883.72656, 254.17969, 883.72656, 950.1797, 755.72656, 585.8203, 510.1797, 619.72656, 966.1797, 972.27344, 563.72656, 705.8203, 510.1797, 724.27344, 355.72656, 446.1797, 208, 420.35156, 638.1797, 588.27344, 638.1797, 483.72656, 350.1797, 883.72656, 438.1797, 468.27344, 608, 475.64844, 577.8203, 483.72656, 280, 483.64844, 408, 476.35156, 310.1797, 596.27344, 608, 596.35156, 800, 163.64844, 769.8203, 171.72656, 747.72656, 193.82031, 739.64844, 224, 747.72656, 254.17969, 694.1797, 251.72656, 664, 243.64844, 830.1797, 276.27344, 838.1797, 668.27344, 777.8203, 811.72656, 352, 852.35156, 664, 364.35156, 438.1797, 363.72656, 633.8203, 356.27344, 350.1797, 988.27344, 382.1797, 844.27344, 611.72656, 334.1797, 603.64844, 304, 611.72656, 273.8203, 238.17969, 307.72656, 633.8203, 251.72656, 208, 299.64844, 936, 980.35156, -518, 1262.0625, 905.8203, 972.27344, 320, 996.35156, 289.8203, 988.27344, 267.72656, 966.1797, 259.64844, 936, 267.72656, 905.8203, 238.17969, 916.27344, 377.8203, 468.27344, 480, 611.64844, 289.8203, 883.72656, 260.27344, 894.1797, 208, 924.35156, 177.82031, 916.27344, 155.72656, 894.1797, 147.64844, 864, 155.72656, 833.8203, 177.82031, 811.72656, 208, 803.64844, 238.17969, 811.72656, 147.64844, 360, 155.72656, 390.1797, 249.82031, 491.72656, 227.72656, 513.8203, 177.82031, 412.27344, 219.64844, 544, 616, 675.64844, 280, 604.35156, 769.8203, 276.27344, 716.27344, 273.8203, 177.82031, 307.72656, 155.72656, 329.8203, 227.72656, 574.1797, 249.82031, 596.27344, 260.27344, 833.8203, 291.64844, 792, 299.72656, 761.8203, 449.8203, 619.72656, 427.72656, 641.8203, 419.64844, 672, 427.72656, 702.1797, 352, 731.64844, 449.8203, 724.27344, 382.1797, 739.72656, 808, 803.64844, 668.27344, 766.1797, 646.1797, 788.27344, 321.8203, 844.27344, 299.72656, 822.1797, 321.8203, 739.72656, 480, 732.35156, 532.27344, 702.1797, 585.8203, 683.72656, 646.1797, 683.72656)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(10, 11, 12, 13), PackedInt32Array(14, 15, 16, 17, 18, 19), PackedInt32Array(20, 21, 22, 23), PackedInt32Array(24, 25, 26, 27), PackedInt32Array(28, 29, 30, 31), PackedInt32Array(32, 33, 34, 35, 36, 24, 37), PackedInt32Array(38, 39, 40, 41, 42), PackedInt32Array(4, 3, 43, 44), PackedInt32Array(45, 46, 47), PackedInt32Array(48, 21, 20), PackedInt32Array(49, 16, 15), PackedInt32Array(26, 25, 50), PackedInt32Array(12, 11, 51, 52), PackedInt32Array(53, 29, 28), PackedInt32Array(54, 55, 56, 57), PackedInt32Array(55, 54, 58), PackedInt32Array(59, 60, 55, 58, 2), PackedInt32Array(1, 59, 2), PackedInt32Array(8, 7, 61, 62), PackedInt32Array(63, 39, 38, 64, 65), PackedInt32Array(35, 0, 5, 36), PackedInt32Array(57, 56, 66, 67, 68), PackedInt32Array(68, 67, 69, 40), PackedInt32Array(40, 69, 41), PackedInt32Array(62, 61, 70, 71), PackedInt32Array(44, 43, 72, 73), PackedInt32Array(26, 50, 74, 75), PackedInt32Array(76, 53, 28, 77), PackedInt32Array(78, 45, 47, 79), PackedInt32Array(80, 48, 20, 81), PackedInt32Array(74, 49, 15, 82), PackedInt32Array(52, 51, 83, 84), PackedInt32Array(55, 60, 85), PackedInt32Array(86, 55, 85, 87), PackedInt32Array(86, 87, 88), PackedInt32Array(86, 88, 89, 90), PackedInt32Array(73, 72, 91, 92, 93, 17), PackedInt32Array(17, 93, 94), PackedInt32Array(92, 91, 63, 95), PackedInt32Array(96, 97, 98, 99), PackedInt32Array(100, 98, 97, 101), PackedInt32Array(102, 96, 99, 103), PackedInt32Array(104, 37, 24), PackedInt32Array(105, 106, 76, 107), PackedInt32Array(108, 89, 109, 110), PackedInt32Array(89, 108, 111), PackedInt32Array(110, 109, 112), PackedInt32Array(71, 70, 113, 30), PackedInt32Array(114, 78, 79, 115), PackedInt32Array(116, 66, 56), PackedInt32Array(117, 80, 81, 118), PackedInt32Array(84, 83, 119, 120), PackedInt32Array(17, 94, 18), PackedInt32Array(14, 19, 114, 121), PackedInt32Array(74, 82, 122), PackedInt32Array(76, 77, 123), PackedInt32Array(124, 75, 74, 125), PackedInt32Array(126, 100, 101, 127, 128), PackedInt32Array(129, 102, 103, 130), PackedInt32Array(89, 111, 90), PackedInt32Array(86, 90, 131), PackedInt32Array(86, 131, 132), PackedInt32Array(86, 132, 133), PackedInt32Array(86, 133, 134), PackedInt32Array(86, 134, 135, 136, 137), PackedInt32Array(138, 110, 112, 34), PackedInt32Array(139, 95, 63), PackedInt32Array(140, 106, 105, 141), PackedInt32Array(142, 24, 27, 143, 144), PackedInt32Array(145, 31, 30), PackedInt32Array(146, 23, 22, 140), PackedInt32Array(142, 104, 24), PackedInt32Array(147, 144, 143), PackedInt32Array(148, 147, 143), PackedInt32Array(149, 148, 143, 10, 150), PackedInt32Array(10, 13, 150), PackedInt32Array(151, 149, 150, 152, 86), PackedInt32Array(153, 116, 56), PackedInt32Array(153, 56, 154, 155), PackedInt32Array(145, 30, 113, 155, 154, 156), PackedInt32Array(157, 156, 154), PackedInt32Array(158, 157, 154), PackedInt32Array(159, 158, 154), PackedInt32Array(160, 159, 154, 161), PackedInt32Array(120, 119, 162, 127), PackedInt32Array(6, 9, 42, 41), PackedInt32Array(114, 115, 163, 130), PackedInt32Array(76, 123, 107), PackedInt32Array(105, 107, 164), PackedInt32Array(165, 105, 164, 160), PackedInt32Array(161, 165, 160), PackedInt32Array(166, 161, 154), PackedInt32Array(167, 166, 154), PackedInt32Array(168, 167, 154), PackedInt32Array(168, 154, 86, 169), PackedInt32Array(170, 169, 86), PackedInt32Array(171, 170, 86), PackedInt32Array(172, 171, 86), PackedInt32Array(173, 172, 86, 174, 175), PackedInt32Array(74, 122, 125), PackedInt32Array(124, 125, 126, 128), PackedInt32Array(162, 128, 127), PackedInt32Array(120, 127, 176), PackedInt32Array(120, 176, 177, 178), PackedInt32Array(178, 177, 179, 175), PackedInt32Array(47, 46, 65, 180), PackedInt32Array(181, 129, 130, 163), PackedInt32Array(33, 138, 34), PackedInt32Array(182, 33, 32, 183), PackedInt32Array(135, 182, 183, 136), PackedInt32Array(86, 137, 151), PackedInt32Array(86, 152, 184), PackedInt32Array(86, 184, 185), PackedInt32Array(86, 185, 174), PackedInt32Array(173, 175, 179, 186), PackedInt32Array(173, 186, 187), PackedInt32Array(173, 187, 181, 188), PackedInt32Array(189, 105, 188, 181, 190), PackedInt32Array(130, 121, 114), PackedInt32Array(181, 163, 191), PackedInt32Array(181, 191, 192), PackedInt32Array(181, 192, 193), PackedInt32Array(181, 193, 194), PackedInt32Array(195, 181, 194, 196, 197), PackedInt32Array(38, 42, 198), PackedInt32Array(38, 198, 140, 199), PackedInt32Array(200, 199, 140), PackedInt32Array(22, 200, 140), PackedInt32Array(141, 146, 140), PackedInt32Array(201, 141, 105), PackedInt32Array(202, 201, 105), PackedInt32Array(189, 202, 105), PackedInt32Array(203, 190, 181), PackedInt32Array(195, 203, 181), PackedInt32Array(81, 197, 196, 204), PackedInt32Array(81, 204, 118), PackedInt32Array(117, 118, 205), PackedInt32Array(117, 205, 47, 206), PackedInt32Array(180, 206, 47), PackedInt32Array(207, 180, 65), PackedInt32Array(64, 207, 65), PackedInt32Array(63, 65, 139)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-528, -496, 1872, -504, 1856, 1288, -528, 1272)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0sr1o"]
vertices = PackedVector2Array(1541, -246.11719, 1541, 1150.5625, -509.29688, 1269.2969, -280.39063, -269.8828)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-521, -504, -521, 1280, 1863, 1296, 1863, -496)])

[sub_resource type="LabelSettings" id="LabelSettings_serxs"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="LevelTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lhyem")
metadata/_edit_horizontal_guides_ = [1320.0, -600.0]
metadata/_edit_vertical_guides_ = [-600.0, 1880.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -599.0
offset_top = -600.0
offset_right = 601.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74345946, 0.8540354, 0.79331815, 1)

[node name="decor" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="grass" type="TextureRect" parent="ColorRect/decor/Control"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control2" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1288.0
offset_right = 2568.0
offset_bottom = 720.0

[node name="grass2" type="TextureRect" parent="ColorRect/decor/Control2"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control3" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 680.0
offset_top = 720.0
offset_right = 1960.0
offset_bottom = 1440.0

[node name="grass3" type="TextureRect" parent="ColorRect/decor/Control3"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control4" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = -592.0
offset_top = 720.0
offset_right = 688.0
offset_bottom = 1440.0

[node name="grass4" type="TextureRect" parent="ColorRect/decor/Control4"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control5" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1952.0
offset_top = 608.0
offset_right = 3232.0
offset_bottom = 1328.0

[node name="grass5" type="TextureRect" parent="ColorRect/decor/Control5"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control6" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1336.0
offset_top = 1328.0
offset_right = 2616.0
offset_bottom = 2048.0

[node name="grass6" type="TextureRect" parent="ColorRect/decor/Control6"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control7" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 64.0
offset_top = 1432.0
offset_right = 1344.0
offset_bottom = 2152.0

[node name="grass7" type="TextureRect" parent="ColorRect/decor/Control7"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control8" type="Control" parent="ColorRect/decor"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = -1200.0
offset_top = 1440.0
offset_right = 80.0
offset_bottom = 2160.0

[node name="grass7" type="TextureRect" parent="ColorRect/decor/Control8"]
modulate = Color(0, 0.25490198, 0.03529412, 0.7882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_at0gl")
expand_mode = 1

[node name="Control" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control2" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1288.0
offset_right = 2568.0
offset_bottom = 720.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control2"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control3" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 680.0
offset_top = 720.0
offset_right = 1960.0
offset_bottom = 1440.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control3"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control4" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = -592.0
offset_top = 720.0
offset_right = 688.0
offset_bottom = 1440.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control4"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control5" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1952.0
offset_top = 608.0
offset_right = 3232.0
offset_bottom = 1328.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control5"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control6" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 1336.0
offset_top = 1328.0
offset_right = 2616.0
offset_bottom = 2048.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control6"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control7" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = 64.0
offset_top = 1432.0
offset_right = 1344.0
offset_bottom = 2152.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control7"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="Control8" type="Control" parent="ColorRect"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_left = -1200.0
offset_top = 1440.0
offset_right = 80.0
offset_bottom = 2160.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/Control8"]
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ratl3")
expand_mode = 1

[node name="StalkNavRegion" type="NavigationRegion2D" parent="."]
position = Vector2(1, 0)
navigation_polygon = SubResource("NavigationPolygon_kelw5")

[node name="Tiles" type="Node" parent="StalkNavRegion"]
unique_name_in_owner = true

[node name="EnabledFixed" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(296, 720)

[node name="EnabledFixed2" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(208, 864)

[node name="EnabledFixed3" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(480, 672)

[node name="EnabledFixed4" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(616, 752)

[node name="EnabledFixed5" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(608, 536)

[node name="EnabledFixed6" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(1056, 608)

[node name="EnabledFixed7" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(208, 360)

[node name="EnabledFixed8" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(664, 304)

[node name="EnabledFixed9" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(800, 224)

[node name="EnabledFixed10" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(936, 224)

[node name="EnabledFixed11" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(936, 920)

[node name="DisabledNotFixed" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(368, 864)
status = 1
is_status_fixed = false

[node name="DisabledNotFixed2" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(280, 544)
status = 1
is_status_fixed = false

[node name="DisabledNotFixed3" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(808, 616)
status = 1
is_status_fixed = false

[node name="DisabledNotFixed4" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(408, 416)
status = 1
is_status_fixed = false

[node name="DisabledNotFixed5" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(808, 432)
status = 1
is_status_fixed = false

[node name="DisabledNotFixed6" parent="StalkNavRegion/Tiles" instance=ExtResource("4_rmr5i")]
position = Vector2(760, 752)
status = 1
is_status_fixed = false

[node name="AttackNavRegion" type="NavigationRegion2D" parent="."]
position = Vector2(2, 0)
navigation_polygon = SubResource("NavigationPolygon_0sr1o")
navigation_layers = 2

[node name="Player" parent="." instance=ExtResource("5_fwidc")]
unique_name_in_owner = true
top_level = true
position = Vector2(608, 520)

[node name="Enemies" type="Node" parent="."]
unique_name_in_owner = true

[node name="ItemTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="WaveTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="NotificationContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 362.0
offset_top = 8.0
offset_right = 954.0
offset_bottom = 144.0

[node name="DebugEnemiesLeft" type="Label" parent="NotificationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "test"
label_settings = SubResource("LabelSettings_serxs")
